added more styling and a link to github page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <div class="reset-page">
-        <button>Shake Etch A Sketch</button>
+        <button class="shake">Press me to shake!</button>
     </div>
     <div class='container'></div>
 
     <script src='etch.js'></script>
+    <button class="footer-btn">Created by Adrian Sandu</button>
+    <div class="footer-link-btn">
+        <a href="https://github.com/adrians90/etch-a-sketch">
+            <button class="link-btn">GitHub link</button>
+        </a>
+    </div>
 </body>
 </html>
